language/tests/error/InvalidAssignmentInIfCond.hashem
bebin double(x) {
  bede 2 * x;
}

bebin main() {
  age (double(2) = 4) bood {
    42;
  }
}